<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">heart-beat</string>
    <string name="main_home">首页</string>
    <string name="main_news">信息</string>
    <string name="main_my_info">我的资料</string>
    <string name="menu_search">搜索</string>
    <string name="more">更多</string>
	<string name="image_description">content descriptjon</string>
	
	<!-- heart-beat layout -->
	<string name="l_exist">Are you sure exit the application ?</string>
    
    <!-- login layout -->
    <string name="l_heart_beat">heart-beat</string>
    <string name="l_username">Username</string>
    <string name="l_password">Password</string>
    <string name="l_login">LogIn</string>
    <string name="l_forgot_pd">forgot your password ?</string>
    <string name="l_sign_other">Sign In with other:</string>
    <string name="l_register">Register</string>
    <string name="l_reset">Re-fill</string>
    <string name="l_confirm_pw">Confirm password</string>
    <string name="l_go">Go</string>
    <string name="fp_email">Input your e-mail&#8230;</string>
    
    <!-- info layout -->
    <string name="nav_friend">Friend</string>
    <string name="nav_hot">Hot</string>
    <string name="nav_news">News</string>
    <!-- beat list-item layout -->
    <string name="l_price">Price:</string>
    <!-- beat-detail layout -->
    <string name="l_comments">Comments</string>
    <string name="l_commenthint">Input your comments&#8230;</string>
    <string name="l_send">Send</string>
    <string name="l_post_success">post success</string>
    <string name="now_time">just  now</string>
    <string name="post_heart_success">Post heart success!</string>
    <string name="post_heart_failed">Post heart failed!</string>
    <string name="remove_heart_success">Remove heart success!</string>
    <string name="remove_heart_failed">Remove heart failed!</string>
    
    <!-- storage layout -->
    <string name="l_storage">Storage</string>
    <!-- share-detail layout -->
    <string name="l_detail">Detail</string>
    <string name="l_beat_tilte">Input your title of beat</string>
    <string name="l_beat_city">City of beat</string>
    <string name="l_place">Add your place</string>
    <string name="l_beat_price">Price of beat</string>
    <string name="l_beat_description">More detail</string>
    <string name="l_beat_location">Location detail</string>
    <string name="l_description">Description</string>
    <string name="l_price1">Price</string>
    <string name="l_facebook">Facebook</string>
    <string name="l_google">Google</string>
    <string name="l_twitter">Twitter</string>
    <string name="beat_image_null">Yout must set at least one image for beat.</string>
    
    <!-- map-selected layout -->
    <string name="l_search_place">Search place</string>
    <string name="load_location_error">Get location error !</string>
    <string name="load_place_error">Loading place error !</string>
    <!-- map layout -->
    <string name="l_option">Option</string>
    <string name="l_maplist">List display</string>
    <string name="l_people">people:</string>
    <!-- personal layout -->
    <string name="l_profile">Information</string>
    <string name="l_attention">Attention</string>
    <string name="l_friends">Friends</string>
    <string name="l_shares">Shares</string>
    <string name="l_nicker">Nicker:</string>
    <string name="l_city">City:</string>
    <string name="l_email">E-mail:</string>
    <string name="add_attention">Add attention</string>
    <string name="cancle_attention">Cancle attention</string>
    <!-- proifle setting -->
    <string name="profile_edit">Edit your profile</string>
    <string name="sync_share">Sync share</string>
    <string name="profile_logout">Exit the current account</string>
    <string name="q_logout">Do you exit the current account ?</string>
    <string name="avatar_null">You have not set your avatar above</string>
    
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="attention">Attention</string>
    <string name="attentioned">Attentioned</string>
    <string name="network_wait">Please wait&#8230;</string>
    <string name="network_no_title">There is no available network</string>
    <string name="network_no_message">Please open GPRS or WIFI network connections</string>
    
    <!-- server request info -->
    <string name="cookie_null">You must login first</string>
    <string name="server_failed">Server Request Error</string>
    
    <!-- beat activity info -->
    <string name="co_body_null">Yout must input your comment before sending</string>
    <!-- profile actiivty info -->
    <string name="dg_title">Hi</string>
    <string name="dg_fg_username">You forget to write you username</string>
    <string name="dg_fg_password">You forget to write you password</string>
    <string name="sign_success">Sign success</string>
    <string name="sign_failed">Sign up failed.</string>
    <string name="register_success">Register success</string>
    <string name="register_failed">Register failed</string>
    
    <!-- <string name="l_register">Register</string> -->
    <string name="fd_password">Find your password</string>
    <string name="sign_facebook">Sign in with facebook</string>
    <string name="sign_google">Sign in with google</string>
    <string name="sign_twitter">Sign in with twitter</string>
    
    <!-- shareactivity activity -->
    <string name="l_note">Note</string>
    <string name="note_image">Do you want to delete this image?</string>
    <string name="post_beat_success">Post beat success</string>
    <string name="place_unselected">you have not select place where you are</string>
    <string name="crop_app_null">Can not find image crop app</string>
    <string name="sdcard_null">You do not have sdcard</string>
    <string name="location_error">Loading the current location error</string>
    
     <!-- xlistview -->
    <string name="xlistview_header_hint_normal">Pull-down refresh</string>
    <string name="xlistview_header_hint_ready">Loosen refresh data</string>
    <string name="xlistview_header_hint_loading">Loading &#8230;</string>
    <string name="xlistview_header_last_time">Last updated:</string>
    <string name="xlistview_footer_hint_normal">Load more</string>

</resources>