<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:background="@color/banner_color"
    android:orientation="vertical" >
    <RelativeLayout android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:background="#0075d4">
        <ImageView android:id="@+id/refresh" 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:src="@drawable/refresh"
        	android:layout_alignParentRight="true"
        	android:layout_marginRight="2dp"
        	android:padding="2dp"
        	android:layout_centerVertical="true"
        	android:contentDescription="@string/image_description"
        	android:visibility="gone"/>

	   	<RadioGroup android:id="@+id/info_tab"
			android:layout_width="wrap_content"
		    android:layout_centerInParent="true"
		    android:layout_height="48dp"
		    android:orientation="horizontal"
	       	android:gravity="center" >
	        <RadioButton
	            android:id="@+id/nav_friend"
	            
	            android:text="@string/nav_friend"
	        	style="@style/nav_btn"  />
	        <RadioButton
	            android:id="@+id/nav_hot"
	            
	           	android:text="@string/nav_hot"
	            style="@style/nav_btn"  />
	
	        <RadioButton
	            android:id="@+id/nav_news"
	          
	            android:text="@string/nav_news"
	            style="@style/nav_btn" />
		</RadioGroup>
    	
    </RelativeLayout>

    <ImageView
        android:id="@+id/cursor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/nav_bar"
        android:scaleType="matrix" 
        android:visibility="gone"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/vPager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:background="#000000"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />

</LinearLayout>