<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:orientation="vertical"
    android:background="@drawable/back_bj">
    
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_gravity="center"
        style="@style/text_font1"
        android:textSize="40sp"
        android:background="@drawable/sign_in"/>
    <EditText android:id="@+id/login_username" 
        	android:layout_width="fill_parent"
         	android:layout_height="wrap_content"
         	android:paddingLeft="2dp"
         	android:singleLine="true"
         	android:inputType="text"
         	android:digits="1234567890qwertyuiopasdfghjklzxcvbnm"
         	android:hint="@string/l_username"
         	android:textColor="@color/font_color1"
         	android:background="@drawable/btn_edit_bg"/>
 	<EditText android:id="@+id/login_password" 
        	android:layout_width="fill_parent"
         	android:layout_height="wrap_content"
         	android:layout_marginTop="5dp"
         	android:paddingLeft="2dp"
         	android:singleLine="true"
         	android:inputType="textPassword"
         	android:digits="1234567890qwertyuiopasdfghjklzxcvbnm"
         	android:hint="@string/l_password"
         	android:textColor="@color/font_color1"
         	android:background="@drawable/btn_edit_bg"/>

 	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="8dp">
		    <Button
		 	    android:id="@+id/login"
		 	    style="@style/text_font1"
		 	    android:layout_width="wrap_content"
		 	    android:layout_height="38dp"
		 	    android:paddingLeft="15dp"
		 	    android:paddingRight="15dp"
		 	    android:background="@drawable/btn_sign"
		 	    android:gravity="center"
		 	    android:text="@string/l_login"
		 	    android:textStyle="normal" />
 	        <RelativeLayout android:layout_width="fill_parent"
 	            android:layout_height="wrap_content"
 	            android:layout_toRightOf="@id/login"
 	            android:gravity="right"
 	            android:layout_centerVertical="true"
 	            >
 	            <TextView android:id="@+id/register"
	 	            android:layout_width="wrap_content"
	 	            android:layout_height="wrap_content"
	 	            android:layout_alignParentLeft="true"
	 	            android:text="@string/l_register"
	 	            android:textSize="14sp"
	 	            android:textColor="#2c2c2c"
	 	            style="@style/text_font2"/>
	 	        <View android:id="@+id/xiaobing" 
	 	            android:layout_width="1dp" android:layout_height="18dp" 
	 	            
	 	            android:layout_marginLeft="2dp" 
	 	            android:layout_marginRight="2dp" 
	 	            android:layout_toRightOf="@id/register" 
	 	            android:layout_alignTop="@id/register"
					android:background="#2c2c2c"/>
	 	        <TextView android:id="@+id/forgot_password"
	 	            android:layout_width="wrap_content"
	 	            android:layout_height="wrap_content"
	 	            
	 	            android:layout_toRightOf="@id/xiaobing"
	 	            android:layout_alignTop="@id/xiaobing"
	 	            android:text="@string/l_forgot_pd"
	 	            android:textSize="14sp"
	 	            android:textColor="#2c2c2c"
	 	            style="@style/text_font2"/>
 	        </RelativeLayout>
 	        
 	    </RelativeLayout>

 	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="horizontal"
	    android:gravity="bottom"
	    android:layout_marginBottom="15dp">
 	    <TextView android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:text="@string/l_sign_other"
 	        android:textColor="#2c2c2c"
 	        android:textSize="18sp"
 	        android:gravity="bottom"
 	        style="@style/text_font2"/>
 	    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content">
 	        <ImageView android:id="@+id/login_twitter"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
 	            android:contentDescription="@string/image_description"
 	            android:layout_margin="2dp"
 	            android:layout_alignParentRight="true"
 	            android:src="@drawable/t_icon"/>
 	        <ImageView android:id="@+id/login_google"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
 	            android:contentDescription="@string/image_description"
 	            android:layout_margin="2dp"
 	            android:layout_toLeftOf="@id/login_twitter"
 	            android:src="@drawable/g_icon"/>
 	        <ImageView android:id="@+id/login_facebook"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
 	            android:contentDescription="@string/image_description"
 	            android:layout_margin="2dp"
 	            android:layout_toLeftOf="@id/login_google"
 	            android:src="@drawable/f_icon"/>
 	    </RelativeLayout>
 	    
 	</LinearLayout>
    
    
    

</LinearLayout>