<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:paddingBottom="15dp"
    android:orientation="vertical" 
    android:background="@drawable/back_bj">
    <!-- this is not used here. 2012-9-12 -->
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@drawable/bg_topbar" 
        android:visibility="gone">
        
        <ImageView
            android:id="@+id/login_back"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_description"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/back" />
        <View android:id="@+id/spelling"
            android:layout_width="2dp"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@id/login_back"
            android:background="@color/line_color" />
        
        <TextView android:id="@+id/login_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/spelling"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/l_profile" 
            style="@style/text_font1"
            android:textSize="24sp"/>
    </RelativeLayout>
    <!-- register layout -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/register_layout"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:gravity="center_horizontal"
	    android:orientation="vertical"
	    android:visibility="gone"
	    android:paddingLeft="10dp"
    	android:paddingRight="10dp"
    	android:paddingTop="15dp">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/l_register" 
            style="@style/text_font1"
            android:textColor="#4784FE"
            android:textSize="24sp"/>
        <EditText android:id="@+id/register_username" 
        	android:layout_width="fill_parent"
         	android:layout_height="40dp"
         	android:layout_marginTop="5dp"
         	android:paddingLeft="3dp"
         	android:background="@drawable/ground_top"
         	android:singleLine="true"
         	android:inputType="text"
         	android:textColor="@color/font_color1"
         	android:hint="@string/l_username"/>
 		<EditText android:id="@+id/register_password" 
        	android:layout_width="fill_parent"
         	android:layout_height="40dp"
         	android:paddingLeft="3dp"
         	android:background="@drawable/ground_center"
         	android:singleLine="true"
         	android:inputType="textPassword"
         	android:textColor="@color/font_color1"
         	android:hint="@string/l_password"/>
 		<EditText android:id="@+id/register_confirm_password" 
        	android:layout_width="fill_parent"
         	android:layout_height="40dp"
         	android:paddingLeft="3dp"
         	android:background="@drawable/ground_foot"
         	android:singleLine="true"
         	android:inputType="textPassword"
         	android:textColor="@color/font_color1"
         	android:hint="@string/l_confirm_pw"/>
 		<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="8dp">
		 	<Button android:id="@+id/register_done"
		 		android:layout_width="130dp"
		 	    android:layout_height="38dp"
		 	   	android:layout_alignParentLeft="true"
		 	   	android:layout_centerVertical="true"
		 	    android:text="@string/l_register"
		 	    style="@style/text_font1"
		 	    android:textSize="18sp"
		 	    android:background="@drawable/btn_sign"/>
		 	<TextView android:id="@+id/reset"
		 	    android:layout_width="wrap_content"
		 	    android:layout_height="wrap_content"
		 	    android:layout_marginRight="8dp"
		 	    android:layout_toLeftOf="@id/register_done"
		 	    android:layout_alignParentRight="true"
		 	   	android:layout_centerVertical="true"
		 	   	android:text="@string/l_reset"
		 	   	android:textColor="#c1b8b8"
		 	   	android:textSize="18sp"
		 	   	android:textStyle="bold"
		 	    />
	 	</RelativeLayout>
    </LinearLayout>
    <!-- find password layout -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/forgot_password_layout"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:gravity="center_horizontal"
	    android:orientation="vertical"
	   android:visibility="gone"
	    android:paddingLeft="10dp"
    	android:paddingRight="10dp"
    	android:paddingTop="15dp">
	 	<TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            
            android:gravity="center"
            android:text="@string/fd_password" 
            style="@style/text_font1"
            android:textColor="#4784FE"
            android:textSize="24sp"/>
	 	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	 	    android:layout_width="fill_parent"
	    	android:layout_height="45dp"
	    	android:layout_marginTop="10dp"
	    	android:background="@drawable/btn_edit_bg">
	 	    <Button android:id="@+id/password_go" 
	 	        android:layout_width="wrap_content"
	 	        android:layout_height="fill_parent"
	 	        android:layout_alignParentRight="true"
	 	        android:layout_centerVertical="true"
	 	        android:textColor="#FFFFFF"
	 	        android:textStyle="bold"
	 	        android:textSize="18sp"
	 	        android:text="@string/l_go"
	 	        android:background="@drawable/btn_fp"
	 	        />
	 	    <EditText android:id="@+id/password_content"
	 	        android:layout_width="fill_parent"
	 	        android:layout_height="fill_parent"
	 	        android:paddingLeft="2dp"
	 	        android:layout_toLeftOf="@id/password_go"
	 	        android:layout_centerVertical="true"
	 	        android:background="@drawable/transparent"
	 	        android:hint="l"/>
	 	</RelativeLayout>
        
    </LinearLayout>
    <!-- sign with other layout -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/sign_other_layout"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:gravity="center_horizontal"
	    android:orientation="vertical"
	    android:visibility="gone"
	    android:paddingLeft="10dp"
    	android:paddingRight="10dp"
    	android:paddingTop="40dp">
         <EditText android:id="@+id/Alias_username" 
        	android:layout_width="fill_parent"
         	android:layout_height="40dp"
         	android:background="@drawable/ground_top"
         	android:singleLine="true"
         	android:inputType="text"
         	android:hint="Username"/>
 		<EditText android:id="@+id/alias_password" 
        	android:layout_width="fill_parent"
         	android:layout_height="40dp"
         	android:background="@drawable/ground_center"
         	android:singleLine="true"
         	android:password="true"
         	android:hint="Password"/>
 		<Button android:id="@+id/register_done"
	 	    android:layout_width="fill_parent"
	 	    android:layout_height="38dp"
	 	    android:layout_marginTop="8dp"
	 	    android:text="Log In"
	 	    style="@style/text_font1"
	 	    />
    </LinearLayout>

</LinearLayout>